@@ -18,83 +18,46 @@
 
 #include "config.hpp"
 #include "random.hpp"
+#include "util.hpp"
 #include "wassert.hpp"
 #include <sstream>
 
-rng::rng() : random_(NULL)
+rng::rng() : random_(NULL), random_child_(0)
 {}
 
 int rng::get_random()
 {
 	if (!random_)
-		return rand();
+		return rand() & 0x7FFFFFFF;
 
-	config *random;
-	if (!started_ || separator_) {
-		// setup the first [random] or find a nested [random]
-		started_ = true;
-		separator_ = false;
-		random = random_->child("random");
-		if (random == NULL) {
-			random_ = &random_->add_child("random");
-			remaining_values_ = "";
-			goto new_value;
-		}
-		random_ = random;
-		remaining_values_ = (*random_)["value"];
+	const config::child_list random(random_->get_children("random"));
+	if (random_child_ >= random.size()) {
+		random_child_ = random.size();
+		int res = rand() & 0x7FFFFFFF;
+		(random_->add_child("random"))["value"] = lexical_cast<std::string>(res);
+		return res;
+	} else {
+		return lexical_cast_default<int>((*random[random_child_++])["value"], 0);
 	}
-
-	// find some remaining value
-	while (remaining_values_.empty()) {
-		random = random_->child("random");
-		if (random == NULL) {
-			// no remaining value nor child
-			// create a new value and store it, then return it
-			new_value:
-			int res = rand() & 0x7FFFFFFF;
-			std::ostringstream tmp;
-			if (!(*random_)["value"].empty())
-				tmp << ',';
-			tmp << res;
-			(*random_)["value"] += tmp.str();
-			return res;
-		}
-		random_ = random;
-		remaining_values_ = (*random_)["value"];
-	}
-
-	// read the first remaining value and erase it
-	int res = atoi(remaining_values_.c_str()); // atoi stops at the comma
-	std::string::size_type pos = remaining_values_.find(',');
-	if (pos != std::string::npos)
-		remaining_values_.erase(0, pos + 1);
-	else
-		remaining_values_ = "";
-	return res;
 }
 
 const config* rng::get_random_results()
 {
 	wassert(random_ != NULL);
 
-	if (separator_)
-		get_random();
-	return random_->child("results");
+	const config::child_list random(random_->get_children("random"));
+	if (random_child_ >= random.size()) return NULL;
+	return random[random_child_]->child("results");
 }
 
 void rng::set_random_results(const config& cfg)
 {
 	wassert(random_ != NULL);
 
-	if (separator_)
-		get_random();
-	random_->clear_children("results");
-	random_->add_child("results",cfg);
-}
-
-void rng::add_random_separator()
-{
-	separator_ = true;
+	const config::child_list random(random_->get_children("random"));
+	if (random_child_ >= random.size()) return;
+	random[random_child_]->clear_children("results");
+	random[random_child_]->add_child("results",cfg);
 }
 
 config* rng::random()
@@ -106,8 +69,6 @@ config* rng::set_random(config* random)
 {
 	config* old = random_;
 	random_ = random;
-	started_ = false;
-	separator_ = false;
 	return old;
 }
 
@@ -142,10 +103,3 @@ void set_random_results(const config& cfg)
 	wassert(random_generator!=NULL);
 	random_generator->set_random_results(cfg);
 }
-
-void add_random_separator()
-{
-	wassert(random_generator!=NULL);
-	random_generator->add_random_separator();
-}
-
